--- a/Bitcoin/BitcoinSync/app.config
+++ b/Bitcoin/BitcoinSync/app.config
@@ -48,6 +48,12 @@
       <setting name="Currency" serializeAs="String">
         <value>EXU</value>
       </setting>
+      <setting name="ServiceEmail" serializeAs="String">
+        <value>BitcoinSync@exu.me</value>
+      </setting>
+      <setting name="ServicePassword" serializeAs="String">
+        <value>password</value>
+      </setting>
     </Olive.Bitcoin.BitcoinSync.Properties.BitcoinSyncSettings>
     <Olive.Bitcoin.BitcoinSync.BitcoinSync>
       <setting name="BitcoinDaemonHostname" serializeAs="String">
