removed custom errors from dev and beta.

--- a/Website/Web.config
+++ b/Website/Web.config
@@ -61,6 +61,10 @@
       </assemblies>
     </compilation>
 
+    <customErrors mode="Off">
+      
+    </customErrors>
+
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -77,11 +81,8 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
 
-    <httpErrors errorMode="DetailedLocalOnly" existingResponse="Auto">
-      <remove statusCode="404"/>
-      <remove statusCode="500"/>
-      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL" />
-      <error statusCode="500" path="/Error/Error" responseMode="ExecuteURL" />
+    <httpErrors errorMode="Detailed">
+      
     </httpErrors>
   </system.webServer>
 
