--- a/Website/Web.Beta.config
+++ b/Website/Web.Beta.config
@@ -5,15 +5,24 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <system.serviceModel>
     <client>
-      <endpoint 
+      <endpoint
         address="http://services.beta.exu.me"
         name=""
         xdt:Transform="SetAttributes"
         xdt:Locator="Match(name)" />
     </client>
   </system.serviceModel>
-  
-<!--
+  <!--
+  <system.webServer>
+    <httpErrors xdt:Transform="Replace" errorMode="DetailedLocalOnly" existingResponse="Auto">
+      <remove statusCode="404"/>
+      <remove statusCode="500"/>
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL" />
+      <error statusCode="500" path="/Error/Error" responseMode="ExecuteURL" />
+    </httpErrors>
+  </system.webServer>
+-->
+  <!--
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
       In the example below, the "Replace" transform will replace the entire 
@@ -27,4 +36,4 @@
       </customErrors>
   </system.web>
     -->
-  </configuration>
+</configuration>
