add withdraw ability for btc. closes #26

--- a/Bitcoin/BitcoinSync/BitcoinSync.csproj
+++ b/Bitcoin/BitcoinSync/BitcoinSync.csproj
@@ -216,6 +216,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WithdrawProcessor.cs" />
     <Compile Include="ReceiveAddressGenerator.cs" />
     <Compile Include="Properties\BitcoinSyncSettings.Designer.cs">
       <AutoGen>True</AutoGen>
