--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -193,17 +193,21 @@
     <Compile Include="AuthorizationException.cs" />
     <Compile Include="Domain\Account.cs" />
     <Compile Include="AccountType.cs" />
+    <Compile Include="Domain\AccountHold.cs" />
     <Compile Include="Domain\AccountUser.cs" />
     <Compile Include="Domain\AccountWithBalance.cs" />
     <Compile Include="AuthenticationException.cs" />
     <Compile Include="Domain\BitcoinTransaction.cs" />
     <Compile Include="Domain\BitcoinAccountReceiveAddress.cs" />
+    <Compile Include="Domain\BitcoinWithdrawAccount.cs" />
     <Compile Include="Domain\Role.cs" />
     <Compile Include="EntityConfigurations\AccountConfiguration.cs" />
     <Compile Include="EntityConfigurations\AccountUserConfiguration.cs" />
     <Compile Include="EntityConfigurations\BitcoinAccountReceiveAddressConfiguration.cs" />
     <Compile Include="EntityConfigurations\BitcoinTransactionConfiguration.cs" />
     <Compile Include="EntityConfigurations\AccountWithBalanceConfiguration.cs" />
+    <Compile Include="EntityConfigurations\BitcoinWithdrawAccountConfiguration.cs" />
+    <Compile Include="EntityConfigurations\AccountHoldConfiguration.cs" />
     <Compile Include="EntityConfigurations\RoleConfiguration.cs" />
     <Compile Include="EntityConfigurations\SessionConfiguration.cs" />
     <Compile Include="EntityConfigurations\CurrencyConfiguration.cs" />
