--- a/Website.Tests/Website.Tests.csproj
+++ b/Website.Tests/Website.Tests.csproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountControllerTests.cs" />
     <Compile Include="Controllers\ControllerTestBase.cs" />
+    <Compile Include="Controllers\ExchangeControllerTests.cs" />
     <Compile Include="Controllers\MvcMockHelpers.cs" />
     <Compile Include="Controllers\UserControllerTests.cs" />
     <Compile Include="Integration\ViewAndController\AccountTest.cs" />
