--- a/Database.Tests/Database.Tests.csproj
+++ b/Database.Tests/Database.Tests.csproj
@@ -128,6 +128,7 @@
     <Reference Include="Microsoft.Data.Schema, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.Data.Schema.UnitTesting, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -136,6 +137,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +175,12 @@
       <SubType>Designer</SubType>
     </Compile>
     <Compile Include="dbo\UserTableTests.cs">
+      <SubType>Designer</SubType>
+    </Compile>
+    <Compile Include="Exchange\CreateOrderTests.cs">
+      <SubType>Designer</SubType>
+    </Compile>
+    <Compile Include="Exchange\MatchOrderTests.cs">
       <SubType>Designer</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -218,6 +226,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dbo\UserTableTests.resx">
       <DependentUpon>UserTableTests.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Exchange\CreateOrderTests.resx">
+      <DependentUpon>CreateOrderTests.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Exchange\MatchOrderTests.resx">
+      <DependentUpon>MatchOrderTests.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
