--- a/Database.Tests/app.config
+++ b/Database.Tests/app.config
@@ -8,7 +8,7 @@
   <DatabaseUnitTesting>
     <DatabaseDeployment DatabaseProjectFileName="..\..\..\..\..\..\Database\Database.dbproj" Configuration="Debug" />
     <DataGeneration ClearDatabase="false" />
-    <ExecutionContext Provider="System.Data.SqlClient" ConnectionString="Data Source=.\SQLEXPRESS;Initial Catalog=OliveTest;User=ServiceUser;Password=temp;Pooling=False" CommandTimeout="30" />
-    <PrivilegedContext Provider="System.Data.SqlClient" ConnectionString="Data Source=.\SQLEXPRESS;Initial Catalog=OliveTest;Integrated Security=True;Pooling=False" CommandTimeout="30" />
+    <ExecutionContext Provider="System.Data.SqlClient" ConnectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Olive;User=ServiceUser;Password=password;Pooling=False" CommandTimeout="30" />
+    <PrivilegedContext Provider="System.Data.SqlClient" ConnectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Olive;Integrated Security=True;Pooling=False" CommandTimeout="30" />
   </DatabaseUnitTesting>
 </configuration>
